--- a/source-css/batquisition.css
+++ b/source-css/batquisition.css
@@ -177,3 +177,12 @@ a[href|="/speckseesyou"] {
  height: 105px;
  background-image: url(%%specksees-you%%);
 } 
+
+a[href|="/kalsalute"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 221px;
+ height: 150px;
+ background-image: url(%%kalsalute%%);
+} 
