--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -44,6 +44,11 @@ a[href|="/alwaysthinkinofyou"]{display:block;clear:none;float:left;width:171px;h
 a[href|="/lbbump"]{display:block;clear:none;float:left;width:150px;height:109px;background-image:url(%%lbbump%%)}
 a[href|="/bonstare"]{display:block;clear:none;float:left;width:268px;height:295px;background-image:url(%%bonstare%%)}
 a[href|="/bonmegastare"]{display:block;clear:none;float:left;width:523px;height:565px;background-image:url(%%bonmegastare%%)}
+a[href|="/bonwink"]{display:block;clear:none;float:left;width:129px;height:151px;background-image:url(%%bonwink%%)}
+a[href|="/bonshock"]{display:block;clear:none;float:left;width:150px;height:127px;background-image:url(%%bonshock%%)}
+a[href|="/bontail"]{display:block;clear:none;float:left;width:200px;height:158px;background-image:url(%%bontail%%)}
+a[href|="/bonmad"]{display:block;clear:none;float:left;width:200px;height:113px;background-image:url(%%bonmad%%)}
+a[href|="/bonannoyed"]{display:block;clear:none;float:left;width:150px;height:165px;background-image:url(%%bonannoyed%%)}
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
