--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -227,3 +227,13 @@ a[href|="/swordtux"] {
     background-repeat: no-repeat;
     background-image: url(%%swordtux%%)
     }
+
+a[href|="/battlestance"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 181px;
+    height: 240px;
+    background-repeat: no-repeat;
+    background-image: url(%%battlestance%%)
+    }
