--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -172,10 +172,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
-/*Current footer by /u/9ninenein*/
- background-image:url(%%sbstare-abyss%%);
+ background-image:url(%%sweetie-bees%%);
  background-repeat:no-repeat;
- margin-bottom:-30px;
+ margin-bottom:-80px;
  background-position: 50% 100%;
 }
 
@@ -888,7 +887,9 @@ body:lang(np):not(.subscriber) .usertext-edit,body:lang(np):not(.subscriber) .si
 #header-img {margin-right: 0px;}
 #header span.pagename.redditname {position:relative;z-index:10;}
 
+/*
 .side a[href="http://redd.it/1bkvw7"]{ display: block; height: 78px; width: 300px; background: url(%%sbstare-banner%%); position: absolute; top: 20px; left: 400px; z-index: 999; margin: 20px 0 0 0; overflow: hidden; border-radius:10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
+*/
 
 .RESDialogSmall.livePreview > h3 {color: black;font-size: 14px;margin-top: 6px;margin-bottom: 10px;font-weight: normal;}
 .res-nightmode .RESDialogSmall h3 {color: #ccc}
