--- a/source-css/mylittlecirclejerk.css
+++ b/source-css/mylittlecirclejerk.css
@@ -246,7 +246,7 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 /* Display a pony-readable one instead */
 span.hover.pagename.redditname a:before {
     color: #e5b3c4;
-    content: "BronyHate FLITTER IS BEST POKEMON";
+    content: "BronyHate HIERO IS BEST POKEMON";
     text-shadow: 1px 1px 2px #000;
     visibility: visible
     }
@@ -318,10 +318,10 @@ div.titlebox span.word {
 display: none  
 }  
 div.titlebox span.subscribers:after {  
-content: "% Cooler"
+content: "% more Hiero"
 }
 .users-online:after {
-  content: "cloppers destroying the fandom"
+  content: "Hieros currently Hieroing"
 }
 /*Hugs, Brony place your code of doom below here!*/
 
