--- a/source-css/mylittlekitchen.css
+++ b/source-css/mylittlekitchen.css
@@ -54,3 +54,7 @@ a[href="/hotsauce"] {
     height: 150px;
     background-image: url(%%hotsauce%%);
 }
+
+#header-img {
+    background-image: url(%%header-img%%);
+}
