--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -295,14 +295,6 @@ a[href|="/pwetty"] {
   height:150px;
 }
 
-a[href|="/huggingcloudchaser"] {
-  background-image: url(%%huggingcloudchaser%%);
-  display:block;
-  clear:none;
-  float:left;
-  width:150px;
-  height:114px;
-}
 
 a[href|="/alicorneyes"] {
   background-image: url(%%alicorneyes%%);
@@ -575,13 +567,13 @@ a[href|="/cutevinyl"] {
   height:150px;
 }
 
-a[href|="/tulpa"] {
-  background-image: url(%%tulpa%%);
+a[href|="/shibe"] {
+  background-image: url(%%PT4AEyr%%);
   display:block;
   clear:none;
   float:left;
-  width:200px;
-  height:150px;
+  width:155px;
+  height:200px;
 }
 
 a[href|="/awakedash"] {
