--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -219,7 +219,7 @@ a.author[href$="JustAnotherGDB"]:after {
     content: "SeriouslyGDB ";
     }
 a.author[href$="maku450"]:after {
-    content: "SeriouslyMaku ";
+    content: "SeriouslyMaku, Advisor to the great one";
     }
 a.author[href$="Ghassul"]:after {
     content: "SeriouslyGhassul ";
