--- a/source-css/ponyloungerts.css
+++ b/source-css/ponyloungerts.css
@@ -1,12 +1,13 @@
 /* Stylesheet shamelessly and lazily copied from other subs, especially mylittlebravery */
 
-.pagename a, .titlebox h1 a {color:DeepPink!important;font-size:xx-large!important;text-decoration:none!important;text-shadow: 3px 0px 0px white, 3px 3px 0px white, 3px -3px 0px white, 0px 3px 0px white, 0px -3px 0px white, -3px 3px 0px white, -3px 0px 0px white, -3px -3px 0px white}
-#header {background-color:paleturquoise!important;}
-.tabmenu a {color:deeppink!important;}
-.tabmenu li.selected a {color:hotpink!important;}
+.pagename a, .titlebox h1 a {color:#e2a9e9!important;font-size:x-large!important;text-decoration:none!important;text-shadow: 2px 0px 0px white, 2px 2px 0px white, 2px -2px 0px white, 0px 2px 0px white, 0px -2px 0px white, -2px 2px 0px white, -2px 0px 0px white, -2px -2px 0px white}
+#header {background-color:#71d4f0!important;}
+.tabmenu a {color:#e2a9e9!important;}
+.tabmenu li.selected a {color:#e2a9e9!important;}
 
-.side {background-color:lightpink!important;}
-body{background:url(%%background1%%) no-repeat fixed center center}
+.side {background-color:#80dab7!important;}
+body{background:url(%%background%%) no-repeat fixed center center}
+
 
 /*---------------------- Nightmode fixes for the background -------------------------------- */
 .content #siteTable div[onclick="click_thing(this)"] {
@@ -46,9 +47,9 @@ div.titlebox .users-online span.number:after {
 
 /*i literally stole this from /r/braveryjerk*/
 /*upron*/
-.arrow.up{background-image:url(%%notupron%%)!important;background-position:0px 0px!important;height:27px!important;width:22px!important}
-.arrow.upmod{background-image:url(%%upron%%)!important;background-position:0px 0px!important;height:27px!important;width:22px!important}
-.comment .midcol {width: 25px}
+.arrow.up{background-image:url(%%downflutter1%%)!important;background-position:0px 0px!important;height:25px!important;width:30px!important}
+.arrow.upmod{background-image:url(%%upflutter2%%)!important;background-position:0px 0px!important;height:25px!important;width:30px!important}
+.comment .midcol {width: 35px}
 .midcol {overflow:visible}
 
 body{position:relative}
@@ -69,15 +70,15 @@ display: none
 /*attempt at sidebar pony thing*/
 .side a[href="http://isitchristmas.com/"] {
     display: block;
-    height: 285px;
-    width: 129px;
-    background: url(%%doubleflutter-tophat%%);
+    height: 95px;
+    width: 120px;
+/* normal width 129 px */
+    background: url(%%flutterthink%%);
     position: fixed;
-    top: 260px;
+    top: 360px;
     right: -15px;
     z-index: 999;
     }
-
 /*flutterthink stolen from http://trotpilgrim.deviantart.com/art/Fluttershy-Thinking-284336433*/
 
 /*el emotes*/
@@ -296,6 +297,251 @@ height: 180px;
 background-image: url(%%minimudcrabarmor%%) !important
 }
 
+/* -----flair test-----*/
+/************
+
+   User Icons 
+
+*************/
+.flair {
+     padding:0;
+     background:none;
+     color:black;
+     border:0;
+     border-radius:0;
+     background-image: url(%%user-icons%%);
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+     }
+
+.flair-rainbowdash {
+    background-position: 0px 0px
+}
+
+.flair-twilight {
+    background-position: -16px 0px
+}
+
+.flair-fluttershy {
+    background-position: 0px -16px
+}
+
+.flair-applejack {
+    background-position: -16px -16px
+}
+
+.flair-pinkiepie {
+    background-position: 0px -32px;
+}
+
+.flair-pinkiepiecmc {
+    background-position: 0px -32px;
+}
+
+.flair-rarity {
+    background-position: -16px -32px;
+}
+
+.flair-trixie {
+    background-position: 0px -48px;
+}
+
+.flair-cmc {
+    background-position: -16px -48px;
+}
+.flair-cmcchinchy {
+    background-position: -16px -48px;
+    margin-left:5px;
+}
+
+.flair-luna {
+    background-position: 0px -64px;
+}
+
+.flair-celestia {
+    background-position: -16px -64px;
+}
+
+.flair-derpy {
+    background-position: 0px -80px;
+}
+
+.flair-vinyl {
+    background-position: -16px -80px;
+}
+
+.flair-lyra {
+    background-position: 0px -96px;
+}
+
+.flair-bonbon {
+    background-position: -16px -96px;
+}
+.flair-octavia {
+    background-position: 0px -112px;
+}
+
+.flair-doctor {
+    background-position: -16px -112px;
+}
+
+.flair-mac {
+    background-position: 0px -128px;
+}
+
+.flair-colgate {
+    background-position: -16px -128px;
+}
+
+.flair-berry {
+    background-position: -0px -144px;
+}
+.flair-pokey {
+    background-position: -16px -144px;
+}
+.flair-roseluck {
+    background-position: -0px -160px;
+}
+.flair-zecora {
+   background-position: -16px -160px;
+}
+.flair-seafoam {
+    background-position: -0px -176px;
+}
+.flair-carrottop {
+    background-position: -16px -176px;
+}
+.flair-screwball {
+    background-position: -0px -192px;
+}
+.flair-redheart {
+    background-position: -16px -192px;
+}
+.flair-caramel {
+    background-position: -0px -208px;
+}
+.flair-braeburn {
+    background-position: -16px -208px;
+}
+.flair-wonderbolts {
+    background-position: -0px -224px;
+}
+.flair-shadowbolts {
+    background-position: -16px -224px;
+}
+.flair-scootaloo {
+    background-position: -0px -240px;
+}
+.flair-applebloom {
+    background-position: -16px -240px;
+}
+.flair-sweetiebelle {
+    background-position: -0px -256px;
+}
+.flair-davenport {
+    background-position: -16px -256px;
+}
+.flair-cheerilee{
+    background-position: -0px -272px;
+}
+.flair-nightmaremoon{
+    background-position: -16px -272px;
+}
+.flair-blueblood{
+    background-position: -0px -288px;
+}
+.flair-daring{
+    background-position: -16px -288px;
+}
+.flair-mrcake{
+    background-position: -0px -304px;
+}
+.flair-mrscake{
+    background-position: -16px -304px;
+}
+.flair-flam{
+    background-position: -0px -320px;
+}
+.flair-flim{
+    background-position: -16px -320px;
+}
+.flair-silverspoon{
+    background-position: -0px -336px;
+}
+.flair-diamondtiara{
+    background-position: -16px -336px;
+}
+.flair-snips{
+    background-position: -0px -352px;
+}
+.flair-snails{
+    background-position: -16px -352px;
+}
+.flair-twist{
+    background-position: -0px -368px;
+}
+.flair-gaben{
+    background-position: -16px -368px;
+}
+.flair-sparkler{
+    background-position: -0px -384px;
+}
+.flair-disco{
+    background-position: -16px -384px;
+}
+.flair-fancypants{
+    background-position: -0px -400px;
+}
+.flair-fleur{
+    background-position: -16px -400px;
+}
+.flair-cadence{
+    background-position: -0px -416px;
+}
+.flair-shiningarmor{
+    background-position: -16px -416px;
+}
+.flair-filthyrich{
+    background-position: -0px -432px;
+}
+.flair-hoitytoity {
+    background-position: -16px -432px;
+    }
+.flair-cloudchaser {
+    background-position: -0px -448px;
+    }
+.flair-flitter {
+    background-position: -16px -448px;
+    }
+.flair-lily {
+    background-position: -0px -464px;
+    }
+.flair-grannysmith {
+   background-position: -16px -464px;
+   }
+.flair-daisy {
+   background-position: -0px -480px;
+   }
+.flair-blankflank{
+    background-image: none;
+    height: 0;
+    width: 0;
+}
+
+/* RES Nightmode flair fix */
+.res-nightmode .tagline .flair {
+    background-color: transparent !important;
+}
+
+.res-nightmode .side .md h3 {
+    color:#DDD !important;
+}
+
+.res-nightmode .side .titlebox .usertext-body .md h3 {
+    color: white !important;
+}
+
 
 
 /*test*/
@@ -329,6 +575,3 @@ flair.benned2:before,flair.benned:after{background:url(%%bn8T7vwT7Lyio5iX%%) 0 0
     top: 0;
     line-height:40px;
     vertical-align: bottom;
-
-
-
